platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_6.platter
flag of x = 1.2 < 3;
start() {}